--- a/_posts/2019-12-29-the-us-narrative-today.html
+++ b/_posts/2019-12-29-the-us-narrative-today.html
@@ -739,107 +739,107 @@ stories:
   domain: http://corsicanadailysun.com/
   link: https://www.corsicanadailysun.com/arkansas-georgia-tech-basketball/image_45d96c70-0737-5617-aacb-5de2598ef5cc.html
 images:
-- name: liberty-back-statue-liberty-back-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-alien-goggles.jpg
-- name: cargo-ship-cargo-ship-on-sea-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-colored-circuits.jpg
-- name: fast-lights-freeway-redes-fast-flux-623x425.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425.jpg
-- name: downtown-fredericksburg-downtown-fredericksburg-nazi-poster.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-nazi-poster.JPG
-- name: oldbarn-oldbarn-alberto-giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-alberto-giacometti.jpg
-- name: gypsy-wagon-gypsywagon-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-gan-vogh.jpg
-- name: aws-s3-stories-servers-hallway-door.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-servers-hallway-door.jpg
-- name: nazi-invasion-P5290036.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-P5290036.jpg
-- name: store-on-corner-store-creativity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-creativity.jpg
-- name: aws-s3-stories-redes-fast-flux-623x425-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-redes-fast-flux-623x425-blue-electricity.jpg
-- name: nazi-invasion-pigeon_35927783393_o.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-pigeon_35927783393_o.jpg
-- name: oldhouse-oldhouse-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-crabapple.jpg
-- name: old-cabin-oldcabin-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-atari-asteroids.jpg
-- name: soldiers-talking-34536952486-52cd6bb1d1-h-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-alien-goggles.jpg
-- name: beach-rocks-beach-rocks-currents-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-green-zuma.jpg
-- name: victoria-victoria-corner-hotel-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/victoria-victoria-corner-hotel-blue-circuit.jpg
-- name: san-francisco-street-view-san-francisco-street-view-blue-circuit-4.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-blue-circuit-4.jpg
-- name: soldier-kneeling-26304845730-d4e495e25f-o-blue-circuit-4.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-blue-circuit-4.jpg
-- name: braceros-domingo-ulloa-piano-in-street-good.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-piano-in-street-good.jpg
-- name: window-window-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-aqua.jpg
-- name: server-cloud-server-racks-clouds-dry-skin.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-dry-skin.jpg
-- name: stalin-time-glass-ball-downtown.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-glass-ball-downtown.jpg
-- name: hollywood-building-hollywood-building-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-light-dali.jpg
-- name: bf-skinner-seattle-shipping-people-walking.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-seattle-shipping-people-walking.jpg
-- name: la-muse-castle-window_35928999923_o.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-castle-window_35928999923_o.jpg
-- name: old-door-lock-old-door-lock-blue-granite.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-blue-granite.jpg
-- name: old-granary-field-oldhouse-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-alien-goggles.jpg
-- name: machine-road-machine-road-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-atari-asteroids.jpg
-- name: art-museum-art-museum-ww2-color.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-ww2-color.jpg
-- name: oldcabin-oldcabin-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-dark-soul.jpg
-- name: blossombar-spagetti-accident-file-00-00-24-99.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-spagetti-accident-file-00-00-24-99.jpg
-- name: death-valley-death-valley-national-park-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-really-hot.jpg
-- name: braceros-domingo-ulloa-adam-smith-edinburgh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-adam-smith-edinburgh.jpg
-- name: wind-mills-windmills-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wind-mills-windmills-constitution.jpg
-- name: paris-paris-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-pablo-blue.jpg
-- name: blossombar-plentiful-file-00-00-50-62.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-plentiful-file-00-00-50-62.jpg
-- name: border-crossing-bordercrossing-dali-two.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-dali-two.png
-- name: castle-on-hill-castle-on-hill-edinburgh-crabapple.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-crabapple.JPG
-- name: bf-skinner-face-eyes-shut-statue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-face-eyes-shut-statue.jpg
-- name: stalin-time-downtown-sidewalk-washington.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-downtown-sidewalk-washington.jpg
-- name: eduardo-eduardo-neo-instinct.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-neo-instinct.jpg
-- name: stalin-time-downtown-light-posts.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-downtown-light-posts.jpg
-- name: bordercrossing-bordercrossing-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-blue-electricity.jpg
-- name: fence-fence-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-blue-brush.jpg
-- name: berlinwall2-berlinwall-purple-storm.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-purple-storm.jpg
-- name: border-crossing-bordercrossing-yellow-collage.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-yellow-collage.png
-- name: bluelake-deep-connections-file-00-00-00-00.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-deep-connections-file-00-00-00-00.jpg
-- name: soldiers-talking-34536952486-52cd6bb1d1-h-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-constitution.jpg
-- name: dragon-desert-desert-dragon-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-crunch-paper.jpg
-- name: white-house-lawn-white-house-lawn-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-sand-paper.jpg
-- name: fence-mexico-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-gred-mash.jpg
+- name: nazi-invasion-screaming-face-statue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-screaming-face-statue.jpg
+- name: downtheline-downtheline.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline.jpg
+- name: castle-wall-DSC-0067-feed-people.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-feed-people.JPG
+- name: art-museum-art-museum-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-post-modern.jpg
+- name: old-barn-old-barn-1500-yellow-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-yellow-paper.jpg
+- name: white-house-whitehouse-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-crabapple.jpg
+- name: berlinwall2-berlinwall-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-colored-circuits.jpg
+- name: stories-docks-copper-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-docks-copper-circuit.jpg
+- name: gypsy-wagon-gypsywagon-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-dry-skin.jpg
+- name: white-house-whitehouse-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-rainbow-festival.jpg
+- name: statue-of-liberty-front-view-statueofliberty-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-mucha-mult.jpg
+- name: oldbarn-oldbarn-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-purple-storm.jpg
+- name: catacombs-catacombs-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-deep-connections.jpg
+- name: pigeons-on-the-ledge-pigeons-on-ledge-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-kandinsky-bv.jpg
+- name: containership-containership-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-gan-vogh.jpg
+- name: mediterranean-mediterranean-blue-electricity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-blue-electricity.jpg
+- name: fast-lights-freeway-redes-fast-flux-623x425-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-plentiful.jpg
+- name: aws-s3-stories-new-machine-road-blue-circuit-4.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-machine-road-blue-circuit-4.jpg
+- name: sand-hand-sand-hand-ww2-dresden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-ww2-dresden.jpg
+- name: paris-paris-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-crunch-paper.jpg
+- name: mosaic-face-mosaic-face-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-nazi-poster.jpg
+- name: oldhouse-oldhouse-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-colored-circuits.jpg
+- name: stories-new-57-64-800-500-0-max-0--5--5.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-57-64-800-500-0-max-0--5--5.jpg
+- name: old-granary-field-oldhouse-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-smooth-ride.jpg
+- name: rain-princess-bridge-over-columbia.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-bridge-over-columbia.jpg
+- name: stalin-time-checkpoint-charlie-mcdonalds.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-checkpoint-charlie-mcdonalds.jpg
+- name: carry-load-carryload-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-diego-rivera1.jpg
+- name: blossombar-clean-view-file-00-00-50-62.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-clean-view-file-00-00-50-62.jpg
+- name: oldhouse-granaryfield-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-purp-paper.jpg
+- name: subway-subway-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-smooth-ride.jpg
+- name: school-clouds-church-clouds-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-smoking-cigarette.jpg
+- name: cargo-ship-cargo-ship-on-sea-blue-circuit-3.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-blue-circuit-3.jpg
+- name: ellis-island-ellisisland-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-space-pizza.jpg
+- name: cargo-ship-cargo-ship-on-sea-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-cinnamon-rolls.jpg
+- name: yosemite-yosemite-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-internet-numbers.jpg
+- name: death-valley-death-valley-national-park-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-matrix.jpg
+- name: nazi-invasion-downtown-la_36349151230_o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-downtown-la_36349151230_o.jpg
+- name: mediterranean-mediterranean-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-diego-rivera1.jpg
+- name: windowmountain-window-mountain-yellow-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-yellow-paper.jpg
+- name: capital-battle-capitolbattle-kand-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-kand-two.jpg
+- name: liberty-back-statue-liberty-back-kand-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-kand-two.jpg
+- name: dragon-desert-desert-dragon-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-colorful-blocks.jpg
+- name: death-valley-death-valley-national-park-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-mucha-mult.jpg
+- name: la-muse-container-several-colors-grey.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-container-several-colors-grey.jpg
+- name: copper-circuit-city-skyline-bright.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-city-skyline-bright.jpg
+- name: curtain-curtain-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-smooth-ride.jpg
+- name: ellis-island-ellisisland-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-dali-two.jpg
+- name: abandonedbuildings_cinnamon_rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_cinnamon_rolls.jpg
+- name: oldbarn-oldbarn-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-alien-goggles.jpg
+- name: gypsy-wagon-gypsywagon-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-rainbow-festival.jpg
+- name: supreme-court-supremecourt-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-crafty-painting.jpg
 ---
 Utah Takes Home Win Streak Into Matchup With Detroit.&nbsp;Lewisport Defends Tax Increase In Public Hearing.&nbsp;Injury Reserve Brings Friends Home For The Holidays.&nbsp;Fiesta Referee Explains Crucial Calls That Flipped Semifinal.&nbsp;Winning Numbers Drawn In 'Powerball' Game.&nbsp;Arkansas Georgia Tech Basketball.&nbsp;Muscatine Man Honored For Years Joining In Special Olympics.&nbsp;Camden Boys Cagers Grab State Berth.&nbsp;
